--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -17,12 +17,17 @@
         
         <controls:Toolbar Grid.Row="0"
                            OpenCommand="{Binding OpenCommand}"
-                           NewCommand="{Binding NewCommand}"/>
+                           NewCommand="{Binding NewCommand}"
+                           SaveCommand="{Binding SaveCommand}"
+                           CloseCommand="{Binding CloseCommand}"/>
 
         <TabControl x:Name="TheTabControl" ItemsSource="{Binding Files}" Grid.Row="1" SelectedItem="{Binding SelectedItem}">
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}"/> 
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Name}"/>
+                        <TextBlock Text="*" Visibility="{Binding HasChanges}"/>
+                    </StackPanel>
                 </DataTemplate>
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
