--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -31,10 +31,9 @@
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="{Binding Name}"/>
                         <TextBlock Text="*" Visibility="{Binding HasChanges,Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                        <Button Content="X" Command="{Binding RelativeSource={RelativeSource FindAncestor, 
-                                                        AncestorType={x:Type Window}}, Path=DataContext.CloseCommand}"  
+                        <Button Content="X" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CloseCommand}"  
                                             CommandParameter="{Binding}"
-                                                        Height="15" Width="15" Margin="10,2,2,2"/>
+                                            Height="15" Width="15" Margin="10,2,2,2"/>
                     </StackPanel>
                 </DataTemplate>
             </TabControl.ItemTemplate>
