--- a/TextEditor/TextEditor.Theme/ColourfulTheme.xaml
+++ b/TextEditor/TextEditor.Theme/ColourfulTheme.xaml
@@ -1,5 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:TextEditor.Theme">
-    
+
+    <Style TargetType="{x:Type Menu}">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Margin" Value="3"/>
+    </Style>
+
+
 </ResourceDictionary>
