--- a/TextEditor/TextEditor/App.xaml
+++ b/TextEditor/TextEditor/App.xaml
@@ -1,5 +1,10 @@
-﻿<Application x:Class="TextEditor.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TextEditor"
-             StartupUri="MainWindow.xaml"/>
+             x:Class="TextEditor.App"
+             StartupUri="MainWindow.xaml">
+    <Application.Resources>
+        <ResourceDictionary Source="/TextEditor.Theme;component/ColourFulTheme.xaml" >
+        </ResourceDictionary>
+    </Application.Resources>
+</Application>
