--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -23,13 +23,35 @@
         <TabControl x:Name="TheTabControl" ItemsSource="{Binding Files}" Grid.Row="1" SelectedItem="{Binding SelectedItem}">
             <TabControl.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
+                    <DockPanel>
                         <TextBlock Text="{Binding Name}"/>
                         <TextBlock Text="*" Visibility="{Binding HasChanges,Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                        <Button Content="X" Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CloseCommand}"  
-                                            CommandParameter="{Binding}"
-                                            Height="15" Width="15" Margin="10,2,2,2"/>
-                    </StackPanel>
+                        <Button Background="Transparent" 
+                                BorderBrush="White" 
+                                BorderThickness="1" 
+                                Padding="2" 
+                                Margin="10,2,2,2" 
+                                Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CloseCommand}"  
+                                CommandParameter="{Binding}">
+                            <Canvas Name="canvas" Height="6" Width="6">
+                                <Path Stroke="White" StrokeThickness="1">
+                                    <Path.Data>
+                                        <PathGeometry>
+                                            <PathGeometry.Figures>
+                                                <PathFigure StartPoint="0,0">
+                                                    <LineSegment Point="6,6"/>
+                                                </PathFigure>
+                                                <PathFigure StartPoint="0,6">
+                                                    <LineSegment Point="6,0"/>
+                                                </PathFigure>
+                                            </PathGeometry.Figures>
+                                        </PathGeometry>
+                                    </Path.Data>
+                                </Path>
+                            </Canvas>
+                        </Button>
+                    </DockPanel>
+                   
                 </DataTemplate>
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
