--- a/TextEditor/TextEditor.Theme/Brushes.xaml
+++ b/TextEditor/TextEditor.Theme/Brushes.xaml
@@ -10,7 +10,8 @@
     <Color x:Key="Red500">#F44336</Color>
     
     <Color x:Key="Blue500">#2196F3</Color>
-    <Color x:Key="Blue900">#448AFF</Color>
+    <Color x:Key="Blue900">#0D47A1</Color>
+    <Color x:Key="ABlue200">#448AFF</Color>
 
     <Color x:Key="Amber500">#FFC107</Color>
 
@@ -27,9 +28,15 @@
     <SolidColorBrush x:Key="MenuItemHover" Color="{StaticResource Blue500}"/>
 
     <SolidColorBrush x:Key="DocumentBackground" Color="{StaticResource Grey800}"/>
-    <SolidColorBrush x:Key="DocumentFont" Color="{StaticResource Amber500}"/>
+    <SolidColorBrush x:Key="DocumentFont" Color="White"/>
     <SolidColorBrush x:Key="DocumentTabSelected" Color="{StaticResource Blue500}"/>
     <SolidColorBrush x:Key="DocumentTabNotSelected" Color="{StaticResource Grey700}"/>
     <SolidColorBrush x:Key="DocumentHeadingFont" Color="White"/>
+    <SolidColorBrush x:Key="DocumentTabCloseButtonBorder" Color="White"/>
+    <SolidColorBrush x:Key="DocumentTabCloseButtonStroke" Color="White"/>
+    <SolidColorBrush x:Key="DocumentTabCloseButtonHover" Color="{StaticResource Blue500}"/>
+    <SolidColorBrush x:Key="DocumentTabCloseButtonHoverStroke" Color="{StaticResource Blue500}"/>
+
+    <SolidColorBrush x:Key="FooterForeground" Color="{StaticResource Blue500}"/>
 
 </ResourceDictionary>
