--- a/TextEditor/TextEditor/MainWindow.xaml
+++ b/TextEditor/TextEditor/MainWindow.xaml
@@ -20,49 +20,34 @@
             <MenuItem Command="{Binding CloseCommand}" Header="Close" />
         </Menu>
 
-        <TabControl x:Name="TheTabControl" ItemsSource="{Binding Files}" Grid.Row="1" SelectedItem="{Binding SelectedItem}">
+        <TabControl ItemsSource="{Binding Files}" SelectedItem="{Binding SelectedItem}" DockPanel.Dock="Top" Height="615">
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <DockPanel>
                         <TextBlock Text="{Binding Name}"/>
                         <TextBlock Text="*" Visibility="{Binding HasChanges,Converter={StaticResource BooleanToVisibilityConverter}}"/>
-                        <Button Background="Transparent" 
-                                BorderBrush="White" 
-                                BorderThickness="1" 
-                                Padding="2" 
-                                Margin="10,2,2,2" 
+                        <Button Style="{DynamicResource DocumentTabCloseButton}"
                                 Command="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Window}}, Path=DataContext.CloseCommand}"  
-                                CommandParameter="{Binding}">
-                            <Canvas Name="canvas" Height="6" Width="6">
-                                <Path Stroke="White" StrokeThickness="1">
-                                    <Path.Data>
-                                        <PathGeometry>
-                                            <PathGeometry.Figures>
-                                                <PathFigure StartPoint="0,0">
-                                                    <LineSegment Point="6,6"/>
-                                                </PathFigure>
-                                                <PathFigure StartPoint="0,6">
-                                                    <LineSegment Point="6,0"/>
-                                                </PathFigure>
-                                            </PathGeometry.Figures>
-                                        </PathGeometry>
-                                    </Path.Data>
-                                </Path>
-                            </Canvas>
-                        </Button>
+                                CommandParameter="{Binding}"
+                                DockPanel.Dock="Right"/>
                     </DockPanel>
                    
                 </DataTemplate>
             </TabControl.ItemTemplate>
             <TabControl.ContentTemplate>
                 <DataTemplate>
-                    <TextBox Name="tbMultiLine"
-                             TextWrapping="Wrap"
-                             AcceptsReturn="True"
-                             VerticalScrollBarVisibility="Visible"
+                    <TextBox Name="DocumentWorkSpace"
+                             Style="{StaticResource DocumentWorkSpace}"
                              Text="{Binding Content}"/>
                 </DataTemplate>
             </TabControl.ContentTemplate>
         </TabControl>
+
+        <StackPanel DockPanel.Dock="Bottom">
+            <TextBlock Text="A Simple text editor by Anthony Packer. 2016" 
+                       Foreground="{StaticResource FooterForeground}"
+                       Padding="2,2,20,2"
+                       HorizontalAlignment="Right"/>
+        </StackPanel>
     </DockPanel>
 </Window>
